--- a/landingPage.html
+++ b/landingPage.html
@@ -10,12 +10,44 @@
 </head>
 <body>
     <main>
-        <ul class="nav">
-            <li class="left"><p >Anyday</p></li>
-            <li class="right first"><a href="#">Test Menu</a></li>
-            <li class="right"><a href="#">Test Menu 2</a></li>
-            <li class="right"><a href="#">Test Menu 3</a></li>
-        </ul>
+        <div class="layout">
+            <div class="background">
+                <ul class="nav">
+                    <li class="left"><p >Anyday</p></li>
+                    <li id="first" class="right"><a href="">Test Menu</a></li>
+                    <li class="right"><a href="">Test Menu 2</a></li>
+                    <li class="right"><a href="">Test Menu 3</a></li>
+                </ul>
+                <img class="photo" src="Assets/image.png">
+                <div class="best">Best Of Luck With This Test!</div>
+                <div class="dotdotdot"><img src="Assets/dots.png"></div>
+                <span class="dot"></span>
+                <div class="anydayLove">
+                    <span class="textLine1">WE LOVE</span>
+                    <span class="textLine2">ANYDAY</span>
+                </div>
+                <img class="arrow" src="Assets/arrow.png">
+
+                <form>
+                    <label id="fname">First Name</label>
+                    <input type="text" id="fnameInput" name="fname" placeholder="John"><br>
+                    <label id="lname">Last Name</label>
+                    <input type="text" id="lnameInput" name="lname" placeholder="Smith"><br>
+                    <label id="email">Email Address</label>
+                    <input type="text" id="emailInput" name="email" placeholder="johnsmith@gmail.com"><br>
+                    <button id="formButton"> STAY UPDATED </button>
+                </form>
+
+                <div id="bottomRightText">
+                    <span id="thankYou">Thank You!</span>
+                    <div id="emailInfoText">
+                        When you're Finished with the test.
+                        Send the zip to sam.kim@any-day.com
+                    </div>
+                    <span class="dot2"></span>
+                </div>
+            </div>
+        </div>
     </main>
     
 </body>
